--- a/_data/const/contact.yml
+++ b/_data/const/contact.yml
@@ -20,7 +20,7 @@ email:
   url: ""
 linkedin:
   icon: "fa fa-linkedin"
-  url: "https://www.linkedin.com/in"
+  url: "https://www.linkedin.com"
 twitter:
   icon: "fa fa-twitter"
   url: "https://twitter.com"
@@ -33,7 +33,7 @@ instagram:
   url: "https://www.instagram.com"
 youtube:
   icon: "fa fa-youtube-play"
-  url: "https://www.youtube.com/channel"
+  url: "https://www.youtube.com"
 facebook:
   icon: "fa fa-facebook"
   url: "https://www.facebook.com"
