--- a/_data/owner/en.yml
+++ b/_data/owner/en.yml
@@ -23,7 +23,7 @@ about:
 
 # if you don't want to add copyright year, comment or leave it blank.
 # the year during which the claimed copyright for the work was first asserted.
-copyright_start_year: "2022"
+copyright_start_year: "2024"
 
 # make sure creative_commons.enable is true in _data/conf/main.yml file
 creative_commons:
@@ -50,12 +50,12 @@ meta_common_description: "Your meta description."
 contacts:
   #- github: ""
   - email: "mail@1slab.com"
-  - linkedin: "https://www.linkedin.com/company/1slab/"
+  - linkedin: "company/1slab/"
   #- twitter: ""
   #- mastodon: ""
   #- instagram: ""
-  - youtube: "https://www.youtube.com/@1SLab_en/"
-  - facebook: "https://www.facebook.com/1slab/"
+  - youtube: "@1SLab_en/"
+  - facebook: "1slab/"
 # to add more, check the _data/const/contact.yml file
 #  - your_new_contact: ""
 
