--- a/_data/conf/main.yml
+++ b/_data/conf/main.yml
@@ -155,8 +155,8 @@ scroll_back_to_top_button: true
 ###########################################################
 #                Footer Text
 ###########################################################
-# this enables side navigation bar footer
-side_nav_footer: true
+# this enables side navigation bar footer (copyright year and message)
+#side_nav_footer: true
 
 # this enables footer text to the bottom of the page
 main_footer: true
@@ -214,7 +214,8 @@ top_nav_brand_text_enable: true
 
 # set profile image
 # comment to disable the profile image
-side_nav_profile_img_path: /assets/img/default/profile_pic.jpg
+#side_nav_profile_img_path: /assets/img/default/profile_pic.jpg
+side_nav_profile_img_path: /assets/img/default/EMS-cut-512x512.jpg
 
 # this adds hover effect to bottom buttons
 side_nav_bottom_buttons_hover_effect: "hover-effect"
@@ -250,7 +251,7 @@ contact_form:
 #                Copyright text
 ###########################################################
 # this will add current year to the end of copyright_start_year which is defined in _data/owner/[language].yml
-copyright_add_end_year: false
+copyright_add_end_year: true
 
 # this uses copyright.additional_text defined in _data/lang/[language].yml
 # not recommended if creative_commons is enabled.
