--- a/_data/owner/en.yml
+++ b/_data/owner/en.yml
@@ -14,6 +14,7 @@ name: "1S Lab"
 home:
   # you can also use $site_brand, $site_greetings, $site_welcome in line1 and line2 for replacing texts.
   #top_header_line1: "$site_welcome"
+  # ** Engineering / Devices - may be read in 2 ways: 1) Building devices 2) Blog about engineering and devices
   top_header_line1: "Engineering"
   # if commented, top header will be a single line
   #top_header_line2: "$site_brand"
@@ -51,7 +52,7 @@ meta_common_description: "Your meta description."
 # comment to remove any contact item
 contacts:
   #- github: ""
-  - email: "mail@1slab.com"
+  - email: "mail@1slab.com?subject=Hey%201SLab.com!"
   - linkedin: "company/1slab/"
   - facebook: "1slab/"
   #- twitter: ""
