--- a/_data/owner/en.yml
+++ b/_data/owner/en.yml
@@ -15,7 +15,7 @@ home:
   # you can also use $site_brand, $site_greetings, $site_welcome in line1 and line2 for replacing texts.
   #top_header_line1: "$site_welcome"
   # ** Engineering / Devices - may be read in 2 ways: 1) Building devices 2) Blog about engineering and devices
-  top_header_line1: "Engineering"
+  top_header_line1: "Creating"
   # if commented, top header will be a single line
   #top_header_line2: "$site_brand"
   top_header_line2: "Devices"
